<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgDetalle"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
        android:contentDescription="@string/serie_imagen" />

        <TextView
            android:id="@+id/txtNombreDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textStyle="bold"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/txtTituloDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/director"
            android:textStyle="bold"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/txtDirectorDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reparto"
            android:textStyle="bold"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/txtRepartoDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp" />

        <!-- Nuevo TextView para temporadas -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temporadas"
            android:textStyle="bold"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/txtTemporadasDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sinopsis"
            android:textStyle="bold"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/txtClasificacionDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clasificacion"
            android:textStyle="bold"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/txtSinopsisDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp" />
    </LinearLayout>
</ScrollView>